ingress_ex.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jupyter-panel
spec:
  rules:
  - host: ncote-jupyter.ucar.edu
    http:
      paths:
      - backend:
          serviceName: ncote-binder-container
          servicePort: 8888
  - host: ncote-panel.ucar.edu
    http:
      paths:
      - backend:
          serviceName: ncote-binder-container
          servicePort: 5001
