k8s-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ncar-viz-test
  namespace: ncote-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ncar-viz-test
  template:
    metadata:
      labels:
        app: ncar-viz-test
    spec:
      containers:
      - name: ncar-viz-test
        image: ncote/ncar-viz
        resources:
          limits:
            memory: "1G"
            cpu: "2"
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: ncar-viz-svc
  namespace: ncote-test
  labels:
    app: ncar-viz-test
spec:
  ports:
  - port: 5001
    name: viz-test-port
  selector:
    app: ncar-viz-test
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-viz
  namespace: ncote-test
  labels:
    app: ncar-viz-test
  annotations:
    cert-manager.io/cluster-issuer: "incommon"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - ncote-test.k8s.ucar.edu
      secretName: incommon-account-key
  rules:
  - host: ncote-test.k8s.ucar.edu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ncar-viz-svc
            port:
              number: 5001
